Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6(EOL), 10.11
-
Can result in hang or crash
-
Q3/2026 Server Maintenance
Description
The test case is cli compatible it is not crashing via mtr
SET @@GLOBAL.innodb_trx_purge_view_update_only_debug=1; |
CREATE TABLE t1 (c1 INT KEY) ENGINE=InnoDB PARTITION BY LINEAR HASH(c1) PARTITIONS 1; |
Leads to:
|
CS 10.11.17 8721a00dd38dc0aa1514a3b5ca8c95c6e94af1c9 (Debug, Clang 18.1.3-11) Build 10/05/2026 |
mariadbd: /test/10.11_dbg/storage/innobase/include/trx0purge.h:446: void purge_sys_t::clone_oldest_view(THD *) [also_end_view = false]: Assertion `!thd || !coordinator_thd' failed.
|
|
CS 10.11.17 8721a00dd38dc0aa1514a3b5ca8c95c6e94af1c9 (Debug, Clang 18.1.3-11) Build 10/05/2026 |
Core was generated by `/test/MD100526-mariadb-10.11.17-linux-x86_64-dbg/bin/mariadbd --no-defaults --m'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
 |
[Current thread is 1 (LWP 1020408)]
|
(gdb) bt
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
#1 __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
|
#2 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
|
#3 0x0000726a9464527e in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
|
#4 0x0000726a946288ff in __GI_abort () at ./stdlib/abort.c:79
|
#5 0x0000726a9462881b in __assert_fail_base (fmt=0x726a947d01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x5b87997725b8 "!thd || !coordinator_thd", file=file@entry=0x5b8799726693 "/test/10.11_dbg/storage/innobase/include/trx0purge.h", line=line@entry=446, function=function@entry=0x5b8799772575 "void purge_sys_t::clone_oldest_view(THD *) [also_end_view = false]") at ./assert/assert.c:96
|
#6 0x0000726a9463b517 in __assert_fail (assertion=0x5b87997725b8 "!thd || !coordinator_thd", file=0x5b8799726693 "/test/10.11_dbg/storage/innobase/include/trx0purge.h", line=446, function=0x5b8799772575 "void purge_sys_t::clone_oldest_view(THD *) [also_end_view = false]") at ./assert/assert.c:105
|
#7 0x00005b87990e2489 in purge_sys_t::clone_oldest_view<false> (this=0x5b879aa1b780 <purge_sys>, thd=0x5b87d0b6efd8)at include/trx0purge.h:446
|
#8 0x00005b87990dd61f in trx_purge (n_tasks=4, history_size=2)at /test/10.11_dbg/storage/innobase/trx/trx0purge.cc:1473
|
#9 0x00005b87990c5a26 in purge_coordinator_state::do_purge (this=0x5b879aa1a940 <purge_state>)at /test/10.11_dbg/storage/innobase/srv/srv0srv.cc:1510
|
#10 0x00005b87990c23d5 in purge_coordinator_callback ()at /test/10.11_dbg/storage/innobase/srv/srv0srv.cc:1594
|
#11 0x00005b87992db87a in tpool::task_group::execute (this=0x5b879aa1a700 <purge_coordinator_task_group>, t=0x5b879aa1a798 <purge_coordinator_task>)at /test/10.11_dbg/tpool/task_group.cc:70
|
#12 0x00005b87992dbdbc in tpool::task::execute (this=0x5b879aa1a798 <purge_coordinator_task>)at /test/10.11_dbg/tpool/task.cc:32
|
#13 0x00005b87992d49c3 in tpool::thread_pool_generic::worker_main (this=0x5b87d0b86af0, thread_var=0x5b87d0b86ff0)at /test/10.11_dbg/tpool/tpool_generic.cc:568
|
#14 0x00005b87992d9204 in std::__invoke_impl<void, void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*>(__f=@0x726a68000f98: (void (tpool::thread_pool_generic::*)(class tpool::thread_pool_generic * const, struct tpool::worker_data *)) 0x5b87992d48a0 <tpool::thread_pool_generic::worker_main(tpool::worker_data*)>, __t=@0x726a68000f90: 0x5b87d0b86af0, __args=@0x726a68000f88: 0x5b87d0b86ff0)at /usr/bin/../lib/gcc/x86_64-linux-gnu/13/../../../../include/c++/13/bits/invoke.h:74
|
#15 0x00005b87992d9125 in std::__invoke<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> (__fn=@0x726a68000f98: (void (tpool::thread_pool_generic::*)(class tpool::thread_pool_generic * const, struct tpool::worker_data *)) 0x5b87992d48a0 <tpool::thread_pool_generic::worker_main(tpool::worker_data*)>, __args=@0x726a68000f88: 0x5b87d0b86ff0, __args=@0x726a68000f88: 0x5b87d0b86ff0)at /usr/bin/../lib/gcc/x86_64-linux-gnu/13/../../../../include/c++/13/bits/invoke.h:96
|
#16 0x00005b87992d90f3 in std::thread::_Invoker<std::tuple<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> >::_M_invoke<0ul, 1ul, 2ul> (this=0x726a68000f88)at /usr/bin/../lib/gcc/x86_64-linux-gnu/13/../../../../include/c++/13/bits/std_thread.h:292
|
#17 0x00005b87992d90a5 in std::thread::_Invoker<std::tuple<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> >::operator() (this=0x726a68000f88)at /usr/bin/../lib/gcc/x86_64-linux-gnu/13/../../../../include/c++/13/bits/std_thread.h:299
|
#18 0x00005b87992d8f19 in std::thread::_State_impl<std::thread::_Invoker<std::tuple<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> > >::_M_run (this=0x726a68000f80)at /usr/bin/../lib/gcc/x86_64-linux-gnu/13/../../../../include/c++/13/bits/std_thread.h:244
|
#19 0x0000726a94aecdb4 in ?? () from /lib/x86_64-linux-gnu/libstdc++.so.6
|
#20 0x0000726a9469caa4 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
|
#21 0x0000726a94729c6c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
|
|
Bug Detection Matrix |
Rel o/d Build Commit UniqueID observed
|
CS 10.6 dbg 100526 d37e50c6d04c7c27362f1668ae86fa592b94fb23 !thd || !coordinator_thd|SIGABRT|purge_sys_t::clone_oldest_view<false>|trx_purge|purge_coordinator_state::do_purge|purge_coordinator_callback
|
CS 10.6 opt 100526 d37e50c6d04c7c27362f1668ae86fa592b94fb23 No bug found
|
CS 10.11 dbg 100526 8721a00dd38dc0aa1514a3b5ca8c95c6e94af1c9 !thd || !coordinator_thd|SIGABRT|purge_sys_t::clone_oldest_view<false>|trx_purge|purge_coordinator_state::do_purge|purge_coordinator_callback
|
CS 10.11 opt 100526 8721a00dd38dc0aa1514a3b5ca8c95c6e94af1c9 No bug found
|
CS 11.4 dbg 100526 f279551013d1319f27344080e2c0758f3959cebf No bug found
|
CS 11.4 opt 100526 f279551013d1319f27344080e2c0758f3959cebf No bug found
|
CS 11.8 dbg 100526 04e09010773caf0b302b2933fff3fe95381a5e13 No bug found
|
CS 11.8 opt 100526 04e09010773caf0b302b2933fff3fe95381a5e13 No bug found
|
CS 12.3 dbg 100526 4c371e30f003b601e7485533476208ae27d51937 No bug found
|
CS 12.3 dbg 110526 c0849d98f7ca2627ea90283b125b5b86f75b173a No bug found
|
CS 12.3 opt 100526 4c371e30f003b601e7485533476208ae27d51937 No bug found
|
CS 12.3 opt 110526 c0849d98f7ca2627ea90283b125b5b86f75b173a No bug found
|
CS 13.0 dbg 100526 96b3dd0c34427e9338dda1375575a0e05a7cd267 No bug found
|
CS 13.0 opt 100526 96b3dd0c34427e9338dda1375575a0e05a7cd267 No bug found
|
ES 10.6 dbg 100526 55cfada6c54d1b08f2372adc1369a5e5e76f472d No bug found
|
ES 10.6 opt 100526 55cfada6c54d1b08f2372adc1369a5e5e76f472d No bug found
|
ES 11.4 dbg 100526 90f707057d44f1b5c013a0c3672fd12f32ea7085 No bug found
|
ES 11.4 opt 100526 90f707057d44f1b5c013a0c3672fd12f32ea7085 No bug found
|
ES 11.8 dbg 100526 d4fbd664a4514441bb3d9042c0089842ee6fc3c8 No bug found
|
ES 11.8 opt 100526 d4fbd664a4514441bb3d9042c0089842ee6fc3c8 No bug found
|
ES 12.3 dbg 100526 4063148254974421994024b7cc94f6f2a850177d No bug found
|
ES 12.3 opt 100526 4063148254974421994024b7cc94f6f2a850177d No bug found
|